GNOME Bugzilla – Bug 671285
Totem displays a semi-cryptic error message about encryption after ejecting a DVD which is still running
Last modified: 2012-07-13 12:28:13 UTC
Originally reported at https://bugs.launchpad.net/hundredpapercuts/+bug/945999 When ejecting a DVD while Totem has it open, the following error message is encountered: "Could not read DVD. This may be because the DVD is encrypted and a DVD decryption library is not installed." Totem should be able to recognise that a DVD has been ejected and simply display the default black screen in this situation.
Does this still happen in 3.2 or better in unstable 3.3.x? 3.0 is basically dead...
Movie player bug, not sure about the timing, but we should get a signal from GIO/gvfs about the disc being umounted/ejected, and have it removed from the playlist in time.
commit bbfe9f9e29248b6b581a1d0a6b8e14c1dc5fa6c8 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Jul 2 20:21:25 2012 +0100 main: Make mount comparison sturdier By comparing the default location, rather than comparing pointers. commit 828a5f79416c4ba7a2caaa9ea4494a1845cfaefe Author: Bastien Nocera <hadess@hadess.net> Date: Mon Jul 2 20:19:55 2012 +0100 main: Listen to "mount-removed" signals too As we'd only get "mount-pre-unmount" signals when gvfs is used to eject the device. https://bugzilla.gnome.org/show_bug.cgi?id=671285 commit c66215e23c8f0f876193eb7e5b31cc192ff874b6 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Jul 2 20:19:14 2012 +0100 main: Add sanity check to totem_playlist_clear_with_g_mount() commit 749e836002a29444023160a94806529fd2d071aa Author: Bastien Nocera <hadess@hadess.net> Date: Mon Jul 2 20:18:16 2012 +0100 main: Add a GMount column to the playlist To keep track of it, as by the time the GMount will disappear, it will be too late to try and look for it, and we'd have nothing to compare it against. commit 7936d9031bc8b551bebf5bfb11130afd1f610ddb Author: Bastien Nocera <hadess@hadess.net> Date: Mon Jul 2 19:30:00 2012 +0100 data: Add names for the playlist's columns commit c93dbf7a37bc2862dec23245db8cf915ad670a94 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Jul 2 18:56:27 2012 +0100 main: Fix totem_get_mount_for_dvd() not working We were checking the retval of g_mount_can_eject() the wrong way around, so we never got a mount for the DVD device in question.
*** Bug 664395 has been marked as a duplicate of this bug. ***