main: Listen to "mount-removed" signals too

As we'd only get "mount-pre-unmount" signals when gvfs is used
to eject the device.

https://bugzilla.gnome.org/show_bug.cgi?id=671285